# rassumfrassum

./: .gitignore  README.md  dada  dada.py  jaja.py  jsonrpc.py  lsp_router.py  lspylex.py  notes.txt  pyproject.toml  rass  server_process.py  setup.py  test_client.py  test_client_full.py  test_diagnostics.py  test_echo_server.py  test_echo_server2.py  test_lsp_server.py  utils.py  wowo.py
.github/workflows/: publish.yml  test.yml
presets/: python.py
src/dada/: __init__.py  tete.py
src/rassumfrassum/: __init__.py  backend.py  frassum.py  inferior_process.py  internal_backend.py  main.py  preset.py  preset_loader.py  rassum.py  relay.py  stdio.py  test.py  test2.py  tete.py  util.py
test/: client.py  client_common.py  lib.py  relay.py  run-all.sh  run-test.sh  server.py  server_common.py  test.sh  yoyo.py  yoyo.sh
test/basedpyright+ruff/: client.py  run.sh
test/basedpyright+ruff+codebook/: client.py  run.sh
test/basedpyright+ruff+codebook-streaming/: client.py  run.sh
test/basedpyright+ty/: client.py
test/basedpyright+ty-completion-aggregation/: client.py  run.sh
test/basic/: client.py  run.sh  server.py
test/be-careful-when-merging-dianostics/: client.py  run.sh
test/cancel-request/: client.py  server.py
test/codeaction-aggregation/: client.py  run.sh  server.py
test/definition-aggregation/: client.py  run.sh  server.py
test/diagnostic-aggregation-heroics/: client.py  run.sh  server.py
test/drop-tardy-notification/: client.py  run.sh  server.py
test/drop-tardy-response/: client.py  run.sh  server.py
test/duplicate-response/: client.py  (+2 more)
(+67 files in other folders)
