[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dada-lsp"  # Change this to your chosen name
version = "0.1.0"
authors = [
    { name = "João Távora", email = "joaotavora@gmail.com" },  # Update with your info
]
description = "LSP/JSONRPC multiplexer for connecting one LSP client to multiple servers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["lsp", "language-server-protocol", "multiplexer", "jsonrpc"]

[project.urls]
Homepage = "https://github.com/joaotavora/dada"
Issues = "https://github.com/joaotavora/dada/issues"

[project.scripts]
dada = "dada.dada:main"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = false
